Bug on dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+/* custom-dark.css */
+.dark-mode .ant-input,
+.dark-mode .ant-input-password {
+  background-color: #1f1f1f !important;
+  color: #fff !important;
+  border-color: #333 !important;
+}
